# voice-input

./: .gitignore  README.md
app/: index.html  package-lock.json  package.json
app/src/: App.svelte  Indicator.svelte  main.ts
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio.rs  commands.rs  config.rs  history.rs  lib.rs  llm.rs  main.rs  model.rs  paste.rs  whisper.rs
app/src/lib/: AudioWaveform.svelte  store.ts  types.ts
